--- a/company_web_page.html
+++ b/company_web_page.html
@@ -14,6 +14,8 @@
 
 <HR>
 
+If you want to know more click here
+<a href="about_company.html">About Us</a>
 <H1> This is a Header</H1>
 
 <H2> This is a Medium Header</H2>
@@ -21,6 +23,7 @@
 <P> This is a Paragraph!
 <P><B>This is a New Paragraph!</B>
 <BR> <B> <I> This is a new sentance without a paragraph break, in Bold Italics.</I> </B>
+<BR> <B> <U>This is a new sentance without a paragraph break, in Bold Underline.</U> </B>
 
 <HR>
 
